# sierpinski

./: README.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
sierpinski/: main.py
src/: main.py
