[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sierpinski"
version = "0.1.0"
authors = [
  { name="Ye Xuming", email="xuming.ye@zhichun.org" },
]
description = "Prints Sierpinski triangle."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/fnHoj/sierpinski/"
